src/objects/loan__Funder__c.object
<CustomObject>
    <fields>
        <fullName>loan__Address_1__c</fullName>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_3__c</fullName>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Funder_Name__c</fullName>
        <description>The name of the Funder.</description>
        <label>Funder Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Funder</label>
    <nameField>
        <displayFormat>Fun-{0000}</displayFormat>
        <label>Funder Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>